# CUBEinstaller

./: README.md  pyproject.toml
assets/: cocricot.yml  miniaturia.yml
src/: installer.py  main.py
src/app/: __init__.py  app.py
src/app/widgets/: __init__.py  path.py  tex.py
